syntax = "proto3";

package commentservice;
import "google/protobuf/timestamp.proto";

service CommentService {
  rpc ViewPost(ViewPostRequest) returns (ViewPostResponse);
  rpc LikePost(LikePostRequest) returns (LikePostResponse);
  rpc CommentPost(CommentPostRequest) returns (CommentPostResponse);
  rpc ListComments(ListCommentsRequest) returns (ListCommentsResponse);
}

message ViewPostRequest {
  string post_id = 1;     // ID поста
  string client_id = 2;   // ID клиента, который просматривает
}

// Ответ на просмотр поста
message ViewPostResponse {
  bool success = 1;        // Успешно ли зарегистрирован просмотр
  int64 views_count = 2;   // Обновлённое количество просмотров
}

message LikePostRequest {
  string post_id = 1;
  string user_id = 2;
}

message LikePostResponse {
  bool success = 1;
  int32 like_counts = 2;
}

message CommentPostRequest {
  string post_id = 1;
  string user_id = 2;
  string comment = 3;
}

message CommentPostResponse {
  bool success = 1;
  string comment_id = 2;
}

message ListCommentsRequest {
  string post_id = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message Comment {
  string comment_id = 1;
  string post_id = 2;
  string user_id = 3;
  string content = 4;
  google.protobuf.Timestamp timestamp = 5;
}

message ListCommentsResponse {
  repeated Comment comments = 1;
  string next_page_token = 2;
}